# internal/handler/category.go
@@ -5,7 +5,6 @@ import (
 	"net/http"
 
 	"github.com/JackieLi565/syllabye/internal/config"
-	"github.com/JackieLi565/syllabye/internal/model"
 	"github.com/JackieLi565/syllabye/internal/repository"
 	"github.com/JackieLi565/syllabye/internal/service/logger"
 	"github.com/go-chi/chi/v5"
@@ -23,10 +22,16 @@ func NewCourseCategoryHandler(log logger.Logger, category repository.CourseCateg
 	}
 }
 
+type CourseCategoryRes struct {
+	Id   string `json:"id"`
+	Name string `json:"name"`
+} //@name CourseCategoryResponse
+
 // GetCourseCategory retrieves a specific course category given the ID.
 // @Summary Retrieves a course category.
 // @Tags Course Category
 // @Param categoryId path string true "Category ID"
+// @Success 200 {object} CourseCategoryResponse
 // @Failure 500 {string} string
 // @Security Session
 // @Router /courses/categories/{categoryId} [get]
@@ -37,20 +42,23 @@ func (p *courseCategoryHandler) GetCourseCategory(w http.ResponseWriter, r *http
 	}
 
 	categoryId := chi.URLParam(r, "categoryId")
-	iCourseCategory, err := p.categoryRepo.GetCourseCategory(r.Context(), categoryId)
+	category, err := p.categoryRepo.GetCourseCategory(r.Context(), categoryId)
 	if err != nil {
 		http.Error(w, "Failed to get course category", http.StatusInternalServerError)
 		return
 	}
 
-	json.NewEncoder(w).Encode(model.ToCourseCategory(iCourseCategory))
+	json.NewEncoder(w).Encode(CourseCategoryRes{
+		Id:   category.Id,
+		Name: category.Name,
+	})
 }
 
 // ListCourseCategories returns a list of course categories, optionally filtered by search.
 // @Summary List course categories
 // @Tags Course Category
 // @Param search query string false "Search keyword"
-// @Success 200 {array} model.CourseCategory
+// @Success 200 {array} CourseCategoryRes
 // @Failure 500 {string} string
 // @Security Session
 // @Router /courses/categories [get]
@@ -61,16 +69,19 @@ func (p *courseCategoryHandler) ListCourseCategories(w http.ResponseWriter, r *h
 	}
 
 	query := r.URL.Query()
-	iCourseCategories, err := p.categoryRepo.ListCourseCategories(r.Context(), query.Get("search"))
+	categories, err := p.categoryRepo.ListCourseCategories(r.Context(), query.Get("search"))
 	if err != nil {
 		http.Error(w, "Failed to get course categories", http.StatusInternalServerError)
 		return
 	}
 
-	courseCategories := make([]model.CourseCategory, 0, len(iCourseCategories))
-	for _, iCourseCategory := range iCourseCategories {
-		courseCategories = append(courseCategories, model.ToCourseCategory(iCourseCategory))
+	categoryRes := make([]CourseCategoryRes, 0, len(categories))
+	for _, category := range categories {
+		categoryRes = append(categoryRes, CourseCategoryRes{
+			Id:   category.Id,
+			Name: category.Name,
+		})
 	}
 
-	json.NewEncoder(w).Encode(courseCategories)
+	json.NewEncoder(w).Encode(categoryRes)
 }
