# internal/handler/course.go
@@ -5,11 +5,11 @@ import (
 	"net/http"
 
 	"github.com/JackieLi565/syllabye/internal/config"
-	"github.com/JackieLi565/syllabye/internal/model"
 	"github.com/JackieLi565/syllabye/internal/repository"
 	"github.com/JackieLi565/syllabye/internal/service/logger"
 	"github.com/JackieLi565/syllabye/internal/util"
 	"github.com/go-chi/chi/v5"
+	"github.com/oapi-codegen/nullable"
 )
 
 type courseHandler struct {
@@ -24,11 +24,20 @@ func NewCourseHandler(log logger.Logger, course repository.CourseRepository) *co
 	}
 }
 
+type CourseRes struct {
+	Id          string                    `json:"id"`
+	CategoryId  string                    `json:"categoryId"`
+	Title       string                    `json:"title"`
+	Description nullable.Nullable[string] `json:"currentYear" swaggertype:"primitive,string" extensions:"x-nullable"`
+	Uri         string                    `json:"uri"`
+	Course      string                    `json:"course"`
+} //@name CourseResponse
+
 // GetCourse retrieves a specific course by ID.
 // @Summary Get a course
 // @Tags Course
 // @Param courseId path string true "Course ID"
-// @Success 200 {object} model.Course
+// @Success 200 {object} CourseResponse
 // @Failure 500 {string} string
 // @Security Session
 // @Router /courses/{courseId} [get]
@@ -39,13 +48,20 @@ func (c *courseHandler) GetCourse(w http.ResponseWriter, r *http.Request) {
 	}
 
 	courseId := chi.URLParam(r, "courseId")
-	iCourse, err := c.courseRepo.GetCourse(r.Context(), courseId)
+	course, err := c.courseRepo.GetCourse(r.Context(), courseId)
 	if err != nil {
 		http.Error(w, "Failed to get course", http.StatusInternalServerError)
 		return
 	}
 
-	json.NewEncoder(w).Encode(model.ToCourse(iCourse))
+	json.NewEncoder(w).Encode(CourseRes{
+		Id:          course.Id,
+		CategoryId:  course.CategoryId,
+		Title:       course.Title,
+		Description: util.DefaultNullable(course.Description.Valid, course.Description.String),
+		Uri:         course.Uri,
+		Course:      course.Course,
+	})
 }
 
 // ListCourses returns a paginated list of courses, optionally filtered by name or category.
@@ -55,7 +71,7 @@ func (c *courseHandler) GetCourse(w http.ResponseWriter, r *http.Request) {
 // @Param category query string false "Filter by category ID"
 // @Param page query int false "Page number (default: 1)"
 // @Param size query int false "Page size (default: 25)"
-// @Success 200 {array} model.Course
+// @Success 200 {array} CourseResponse
 // @Failure 500 {string} string
 // @Security Session
 // @Router /courses [get]
@@ -66,21 +82,28 @@ func (c *courseHandler) ListCourses(w http.ResponseWriter, r *http.Request) {
 	}
 
 	query := r.URL.Query()
-	queryFilters := model.CourseFilters{
+	queryFilters := repository.CourseFilters{
 		Search:     query.Get("search"),
 		CategoryId: query.Get("category"),
 	}
 	paginateOptions := util.NewPaginate(query.Get("page"), query.Get("size"))
-	iCourses, err := c.courseRepo.ListCourses(r.Context(), queryFilters, paginateOptions)
+	courses, err := c.courseRepo.ListCourses(r.Context(), queryFilters, paginateOptions)
 	if err != nil {
 		http.Error(w, "Failed to get faculties", http.StatusInternalServerError)
 		return
 	}
 
-	courses := make([]model.Course, 0, len(iCourses))
-	for _, iCourse := range iCourses {
-		courses = append(courses, model.ToCourse(iCourse))
+	courseRes := make([]CourseRes, 0, len(courses))
+	for _, course := range courses {
+		courseRes = append(courseRes, CourseRes{
+			Id:          course.Id,
+			CategoryId:  course.CategoryId,
+			Title:       course.Title,
+			Description: util.DefaultNullable(course.Description.Valid, course.Description.String),
+			Uri:         course.Uri,
+			Course:      course.Course,
+		})
 	}
 
-	json.NewEncoder(w).Encode(courses)
+	json.NewEncoder(w).Encode(courseRes)
 }
