# internal/handler/program.go
@@ -5,7 +5,6 @@ import (
 	"net/http"
 
 	"github.com/JackieLi565/syllabye/internal/config"
-	"github.com/JackieLi565/syllabye/internal/model"
 	"github.com/JackieLi565/syllabye/internal/repository"
 	"github.com/JackieLi565/syllabye/internal/service/logger"
 	"github.com/go-chi/chi/v5"
@@ -23,11 +22,18 @@ func NewProgramHandler(log logger.Logger, program repository.ProgramRepository) 
 	}
 }
 
+type ProgramRes struct {
+	Id        string `json:"id"`
+	FacultyId string `json:"faculty"`
+	Name      string `json:"name"`
+	Uri       string `json:"uri"`
+} //@name ProgramResponse
+
 // GetProgram retrieves a specific program by ID.
 // @Summary Get a program
 // @Tags Program
 // @Param programId path string true "Program ID"
-// @Success 200 {object} model.Program
+// @Success 200 {object} ProgramResponse
 // @Failure 500 {string} string
 // @Security Session
 // @Router /programs/{programId} [get]
@@ -38,13 +44,18 @@ func (p *programHandler) GetProgram(w http.ResponseWriter, r *http.Request) {
 	}
 
 	programId := chi.URLParam(r, "programId")
-	iProgram, err := p.programRepo.GetProgram(r.Context(), programId)
+	program, err := p.programRepo.GetProgram(r.Context(), programId)
 	if err != nil {
 		http.Error(w, "Failed to get program", http.StatusInternalServerError)
 		return
 	}
 
-	json.NewEncoder(w).Encode(model.ToProgram(iProgram))
+	json.NewEncoder(w).Encode(ProgramRes{
+		Id:        program.Id,
+		FacultyId: program.FacultyId,
+		Name:      program.Name,
+		Uri:       program.Uri,
+	})
 }
 
 // ListPrograms returns a list of programs, optionally filtered by faculty or name.
@@ -52,7 +63,7 @@ func (p *programHandler) GetProgram(w http.ResponseWriter, r *http.Request) {
 // @Tags Program
 // @Param faculty query string false "Filter by faculty ID"
 // @Param search query string false "Search by program name or code"
-// @Success 200 {array} model.Program
+// @Success 200 {array} ProgramResponse
 // @Failure 500 {string} string
 // @Security Session
 // @Router /programs [get]
@@ -63,7 +74,7 @@ func (p *programHandler) ListPrograms(w http.ResponseWriter, r *http.Request) {
 	}
 
 	query := r.URL.Query()
-	iPrograms, err := p.programRepo.ListPrograms(r.Context(), model.ProgramFilters{
+	programs, err := p.programRepo.ListPrograms(r.Context(), repository.ProgramFilters{
 		FacultyId: query.Get("faculty"),
 		Name:      query.Get("search"),
 	})
@@ -72,10 +83,15 @@ func (p *programHandler) ListPrograms(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	programs := make([]model.Program, 0, len(iPrograms))
-	for _, iProgram := range iPrograms {
-		programs = append(programs, model.ToProgram(iProgram))
+	programRes := make([]ProgramRes, 0, len(programs))
+	for _, program := range programs {
+		programRes = append(programRes, ProgramRes{
+			Id:        program.Id,
+			FacultyId: program.FacultyId,
+			Name:      program.Name,
+			Uri:       program.Uri,
+		})
 	}
 
-	json.NewEncoder(w).Encode(programs)
+	json.NewEncoder(w).Encode(programRes)
 }
