# internal/model/program.go
@@ -1,34 +1,0 @@
-package model
-
-import (
-	"time"
-)
-
-type Program struct {
-	Id        string `json:"id"`
-	FacultyId string `json:"faculty"`
-	Name      string `json:"name"`
-	Uri       string `json:"uri"`
-}
-
-type IProgram struct {
-	Id        string
-	FacultyId string
-	Name      string
-	Uri       string
-	DateAdded time.Time
-}
-
-func ToProgram(p IProgram) Program {
-	return Program{
-		Id:        p.Id,
-		FacultyId: p.FacultyId,
-		Name:      p.Name,
-		Uri:       p.Uri,
-	}
-}
-
-type ProgramFilters struct {
-	FacultyId string
-	Name      string
-}
